switchable san in Makefile

--- a/lec6/examples/Makefile
+++ b/lec6/examples/Makefile
@@ -1,5 +1,13 @@
 CC=gcc
-CFLAGS=-g -fno-omit-frame-pointer -fsanitize=address
+
+BASE_CFLAGS=-g -fno-omit-frame-pointer
+SAN_CFLAGS=-fsanitize=address
+
+CFLAGS=$(BASE_CFLAGS)
+ifeq ($(SAN),1)
+CFLAGS+=$(SAN_CFLAGS)
+endif
+
 TARGETS=heap-buffer-overflow heap-double-free heap-uaf heap-leak stack-buffer-overflow
 
 all:$(TARGETS)
